--- a/volume-control-example-3.html
+++ b/volume-control-example-3.html
@@ -224,7 +224,7 @@
     const plusButton = document.getElementById('plusButton');
     const volumeControl = document.querySelector('.volume-control');
 
-    let volume = 66;
+    let volume = 74.5;
     let previousVolume = volume;
     let isMuted = false;
     let isDragging = false;
@@ -232,7 +232,7 @@
     function updateSlider() {
         volumeSlider.style.width = `${volume}%`;
         sliderButton.style.left = `${volume}%`;
-        volumeDisplay.textContent = Math.round(volume);
+        volumeDisplay.textContent = Math.round(((volume - 25) / 75) * 100);
     }
 
     function handleMute(event) {
@@ -278,10 +278,10 @@
         if (isDragging) {
             const rect = sliderContainer.getBoundingClientRect();
             let newVolume = ((e.clientX - rect.left) / rect.width) * 100;
-            newVolume = Math.min(Math.max(newVolume, 0), 100);
+            newVolume = Math.min(Math.max(newVolume, 25), 100);
             volume = newVolume;
             
-            if (volume === 0) {
+            if (volume === 25) {
                 volumeControl.classList.add('isMuted');
                 muteButton.classList.add('muted');
                 isMuted = true;
@@ -296,9 +296,9 @@
     }
 
     function adjustVolume(amount) {
-        volume = Math.min(Math.max(volume + amount, 0), 100);
+        volume = Math.min(Math.max(volume + amount, 25), 100);
         
-        if (volume === 0) {
+        if (volume === 25) {
             volumeControl.classList.add('isMuted');
             muteButton.classList.add('muted');
             isMuted = true;
