--- a/volume-control-example-2.html
+++ b/volume-control-example-2.html
@@ -211,7 +211,6 @@
   feather.replace()
 </script>
 
-
 <script>
     const muteButton = document.getElementById('muteButton');
     const volumeSlider = document.getElementById('volumeSlider');
@@ -222,7 +221,7 @@
     const plusButton = document.getElementById('plusButton');
     const volumeControl = document.querySelector('.volume-control');
 
-    let volume = 66;
+    let volume = 74.5;
     let previousVolume = volume;
     let isMuted = false;
     let isDragging = false;
@@ -230,7 +229,7 @@
     function updateSlider() {
         volumeSlider.style.width = `${volume}%`;
         sliderButton.style.left = `${volume}%`;
-        volumeDisplay.textContent = Math.round(volume);
+        volumeDisplay.textContent = Math.round(((volume - 25) / 75) * 100);
     }
 
     function handleMute(event) {
@@ -276,10 +275,10 @@
         if (isDragging) {
             const rect = sliderContainer.getBoundingClientRect();
             let newVolume = ((e.clientX - rect.left) / rect.width) * 100;
-            newVolume = Math.min(Math.max(newVolume, 0), 100);
+            newVolume = Math.min(Math.max(newVolume, 25), 100);
             volume = newVolume;
             
-            if (volume === 0) {
+            if (volume === 25) {
                 volumeControl.classList.add('isMuted');
                 muteButton.classList.add('muted');
                 isMuted = true;
@@ -294,9 +293,9 @@
     }
 
     function adjustVolume(amount) {
-        volume = Math.min(Math.max(volume + amount, 0), 100);
+        volume = Math.min(Math.max(volume + amount, 25), 100);
         
-        if (volume === 0) {
+        if (volume === 25) {
             volumeControl.classList.add('isMuted');
             muteButton.classList.add('muted');
             isMuted = true;
@@ -329,10 +328,6 @@
   </script>
 
 
-
-
 </body>
 </html>
-
-
 
